fix word wrap issue in accordion title + minor fix to accordion title font size

--- a/src/features/layout/accordion/accordion.module.scss
+++ b/src/features/layout/accordion/accordion.module.scss
@@ -21,10 +21,14 @@
         height: 305px;
 
         .accordionTitle {
-            font-size: 5.5rem;
+            font-size: 5rem;
             color: #fff;
             max-width: 50%;
             line-height: 100%;
+        }
+
+        .noWrap {
+            white-space: nowrap;
         }
 
         .accordionDescription {
